--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-template",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Sensible webpack 5 boilerplate using Babel and PostCSS with a hot dev server and an optimized production build.",
   "main": "index.js",
   "scripts": {
@@ -37,8 +37,6 @@
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.9",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
@@ -46,5 +44,10 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.0",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   }
 }
